nginx-app-mainfests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-app
  name: nginx-app
  labels:
    app: nginx-app
  annotations:
     configmap.reloader.stakater.com/reload: "configmap-index-html, configmap-conf"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-app
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-app
          image: nginx:1.25
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: '0.2'
              memory: '300Mi'
            requests:
              cpu: '0.1'
              memory: '100Mi'
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              name: index-html
            - mountPath: /etc/nginx/conf.d/default
              subPath: default
              name: conf
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: index-html
          configMap:
            name: configmap-html
        - name: conf
          configMap:
            name: configmap-conf
      restartPolicy: Always
