nginx-app-mainfests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-app
  name: nginx-app-srv
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
