nginx-app-mainfests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx-app
  name: nginx-app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: <host_name>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app-srv
                port:
                  number: 80
